# fast_zero

./: .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 0d77e65b6382_add_updated_at_field_in_users_table.py  1c82424db6c5_initial_migration.py  245689227edd_initial_migration.py  3fffd02392f5_add_created_at_and_updated_at_columns_.py  94aaffcad1bc_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
